--- a/CSS/todo.css
+++ b/CSS/todo.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(33, 37, 223);
+    background-color:maroon;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
